# Qt6_QML_Project_Rectangle

./: CMakeLists.txt  Level_1.qml  Levels.qml  Main.qml  Main_Menu.qml  README.md  Settings.qml  level_1.cpp  level_1.h  main.cpp  settings.cpp  settings.h
android/: AndroidManifest.xml
